# kinoko_client

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
.github/workflows/: release.yml
src/: CMakeLists.txt  bypass.cpp  chatballoon.cpp  client.h  compactstorage.cpp  config.h  custom.cpp  damageskin.cpp  debug.cpp  debug.h  dropitemaura.cpp  elementaldamage.cpp  flying.cpp  fusionanvil.cpp  helper.cpp  hook.cpp  hook.h  hyperteleport.cpp  injector.cpp  injector.rc  inlink.cpp  itemeff.cpp  launcher.cpp  launcher.manifest  launcher.rc  pch.h  portablechair.cpp  resman.cpp  resolution.cpp  stringpool.cpp  sysopt.cpp  system.cpp  temporarystat.cpp  test.cpp  uiwindow.cpp  walker.cpp
src/com/: archive.h  canvas.h  com.h  gr2d.h  namespace.h  package.h  property.h  resman.h  serialize.h  shape2d.h  uol.h
src/common/: dbbasic.h  iteminfo.h  packet.h  rtti.h  secure.h  skillinfo.h  uint128.h  vecctrl.h
src/wvs/: actionman.h  animationdisplayer.h  clientsocket.h  config.h  ctrlwnd.h  dialog.h  field.h  gobj.h  inputsystem.h  layoutman.h  login.h  maploadable.h  msghandler.h  soundman.h  stage.h  temporarystatview.h  uitooltip.h  uiwnd.h  userlocal.h  util.h  wnd.h  wndman.h  wvsapp.h  wvscontext.h
src/wzlib/: IWzArchive.h  IWzCanvas.h  IWzConvex2D.h  IWzFileSystem.h  IWzGr2D.h  IWzGr2DLayer.h  IWzNameSpace.h  IWzPackage.h  IWzProperty.h  IWzResMan.h  IWzSeekableArchive.h  IWzSerialize.h  IWzShape2D.h  IWzSound.h  IWzUOL.h  IWzVector2D.h  IWzWritableNameSpace.h  archive.h  canvas.h  gr2d.h  namespace.h  package.h  pcom.h  property.h  resman.h  serialize.h  shape2d.h  sound.h
src/ztl/: tsingleton.h  zalloc.h  zcoll.h  zcom.h  zlock.h  zsock.h  zstr.h  ztl.h
